// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`indirect_toast.sql > line 1 1`] = `[Error: syntax error at or near "\\"]`;

exports[`indirect_toast.sql > line 15 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 184,
                "sval": {
                  "sval": "pglz",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "default_toast_compression",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 19 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 15,
            "relname": "indtoasttest",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "descr",
                "is_local": true,
                "location": 28,
                "typeName": {
                  "location": 34,
                  "names": [
                    {
                      "String": {
                        "sval": "text",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "cnt",
                "constraints": [
                  {
                    "Constraint": {
                      "contype": "CONSTR_DEFAULT",
                      "location": 48,
                      "raw_expr": {
                        "A_Const": {
                          "ival": {},
                          "location": 56,
                        },
                      },
                    },
                  },
                ],
                "is_local": true,
                "location": 40,
                "typeName": {
                  "location": 44,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "f1",
                "is_local": true,
                "location": 59,
                "typeName": {
                  "location": 62,
                  "names": [
                    {
                      "String": {
                        "sval": "text",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "f2",
                "is_local": true,
                "location": 68,
                "typeName": {
                  "location": 71,
                  "names": [
                    {
                      "String": {
                        "sval": "text",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 21 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 27,
                "name": "descr",
              },
            },
            {
              "ResTarget": {
                "location": 34,
                "name": "f1",
              },
            },
            {
              "ResTarget": {
                "location": 38,
                "name": "f2",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "indtoasttest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 49,
                          "sval": {
                            "sval": "two-compressed",
                          },
                        },
                      },
                      {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "location": 74,
                                "sval": {
                                  "sval": "1234567890",
                                },
                              },
                            },
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 1000,
                                },
                                "location": 87,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "repeat",
                              },
                            },
                          ],
                          "location": 67,
                        },
                      },
                      {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "location": 101,
                                "sval": {
                                  "sval": "1234567890",
                                },
                              },
                            },
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 1000,
                                },
                                "location": 114,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "repeat",
                              },
                            },
                          ],
                          "location": 94,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 23 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 26,
                "name": "descr",
              },
            },
            {
              "ResTarget": {
                "location": 33,
                "name": "f1",
              },
            },
            {
              "ResTarget": {
                "location": 37,
                "name": "f2",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "indtoasttest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 48,
                          "sval": {
                            "sval": "two-toasted",
                          },
                        },
                      },
                      {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "location": 70,
                                "sval": {
                                  "sval": "1234567890",
                                },
                              },
                            },
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 30000,
                                },
                                "location": 83,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "repeat",
                              },
                            },
                          ],
                          "location": 63,
                        },
                      },
                      {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "location": 98,
                                "sval": {
                                  "sval": "1234567890",
                                },
                              },
                            },
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 50000,
                                },
                                "location": 111,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "repeat",
                              },
                            },
                          ],
                          "location": 91,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 24 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 26,
                "name": "descr",
              },
            },
            {
              "ResTarget": {
                "location": 33,
                "name": "f1",
              },
            },
            {
              "ResTarget": {
                "location": 37,
                "name": "f2",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "indtoasttest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 48,
                          "sval": {
                            "sval": "one-compressed,one-null",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "isnull": true,
                          "location": 75,
                        },
                      },
                      {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "location": 88,
                                "sval": {
                                  "sval": "1234567890",
                                },
                              },
                            },
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 1000,
                                },
                                "location": 101,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "repeat",
                              },
                            },
                          ],
                          "location": 81,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 25 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 26,
                "name": "descr",
              },
            },
            {
              "ResTarget": {
                "location": 33,
                "name": "f1",
              },
            },
            {
              "ResTarget": {
                "location": 37,
                "name": "f2",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "indtoasttest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 48,
                          "sval": {
                            "sval": "one-toasted,one-null",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "isnull": true,
                          "location": 72,
                        },
                      },
                      {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "location": 85,
                                "sval": {
                                  "sval": "1234567890",
                                },
                              },
                            },
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 50000,
                                },
                                "location": 98,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "repeat",
                              },
                            },
                          ],
                          "location": 78,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 26 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 143,
                "relname": "indtoasttest",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 72,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "descr",
                        },
                      },
                    ],
                    "location": 72,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 79,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "FuncCall": {
                              "args": [
                                {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "indtoasttest",
                                        },
                                      },
                                    ],
                                    "location": 109,
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "make_tuple_indirect",
                                  },
                                },
                              ],
                              "location": 89,
                            },
                          },
                          "location": 122,
                          "typeName": {
                            "location": 124,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 130,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 200,
                          },
                          "location": 133,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "substring",
                        },
                      },
                    ],
                    "location": 79,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 29 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "UpdateStmt": {
          "relation": {
            "inh": true,
            "location": 51,
            "relname": "indtoasttest",
            "relpersistence": "p",
          },
          "returningList": [
            {
              "ResTarget": {
                "location": 91,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "indtoasttest",
                                  },
                                },
                              ],
                              "location": 101,
                            },
                          },
                          "location": 113,
                          "typeName": {
                            "location": 115,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 121,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 200,
                          },
                          "location": 124,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "substring",
                        },
                      },
                    ],
                    "location": 91,
                  },
                },
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 68,
                "name": "cnt",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "cnt",
                            },
                          },
                        ],
                        "location": 74,
                      },
                    },
                    "location": 78,
                    "name": [
                      {
                        "String": {
                          "sval": "+",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 79,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 32 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "UpdateStmt": {
          "relation": {
            "inh": true,
            "location": 58,
            "relname": "indtoasttest",
            "relpersistence": "p",
          },
          "returningList": [
            {
              "ResTarget": {
                "location": 107,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "indtoasttest",
                                  },
                                },
                              ],
                              "location": 117,
                            },
                          },
                          "location": 129,
                          "typeName": {
                            "location": 131,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 137,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 200,
                          },
                          "location": 140,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "substring",
                        },
                      },
                    ],
                    "location": 107,
                  },
                },
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 75,
                "name": "cnt",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "cnt",
                            },
                          },
                        ],
                        "location": 81,
                      },
                    },
                    "location": 85,
                    "name": [
                      {
                        "String": {
                          "sval": "+",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 86,
                      },
                    },
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 89,
                "name": "f1",
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 94,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 35 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "UpdateStmt": {
          "relation": {
            "inh": true,
            "location": 65,
            "relname": "indtoasttest",
            "relpersistence": "p",
          },
          "returningList": [
            {
              "ResTarget": {
                "location": 118,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "indtoasttest",
                                  },
                                },
                              ],
                              "location": 128,
                            },
                          },
                          "location": 140,
                          "typeName": {
                            "location": 142,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 148,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 200,
                          },
                          "location": 151,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "substring",
                        },
                      },
                    ],
                    "location": 118,
                  },
                },
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 82,
                "name": "cnt",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "cnt",
                            },
                          },
                        ],
                        "location": 88,
                      },
                    },
                    "location": 92,
                    "name": [
                      {
                        "String": {
                          "sval": "+",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 93,
                      },
                    },
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 96,
                "name": "f1",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 101,
                      },
                    },
                    "location": 103,
                    "name": [
                      {
                        "String": {
                          "sval": "||",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 105,
                        "sval": {
                          "sval": "",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 38 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "UpdateStmt": {
          "relation": {
            "inh": true,
            "location": 9,
            "relname": "indtoasttest",
            "relpersistence": "p",
          },
          "returningList": [
            {
              "ResTarget": {
                "location": 68,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "indtoasttest",
                                  },
                                },
                              ],
                              "location": 78,
                            },
                          },
                          "location": 90,
                          "typeName": {
                            "location": 92,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 98,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 200,
                          },
                          "location": 101,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "substring",
                        },
                      },
                    ],
                    "location": 68,
                  },
                },
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 26,
                "name": "cnt",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "cnt",
                            },
                          },
                        ],
                        "location": 32,
                      },
                    },
                    "location": 36,
                    "name": [
                      {
                        "String": {
                          "sval": "+",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 37,
                      },
                    },
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 40,
                "name": "f1",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "A_Const": {
                            "location": 45,
                            "sval": {
                              "sval": "-",
                            },
                          },
                        },
                        "location": 48,
                        "name": [
                          {
                            "String": {
                              "sval": "||",
                            },
                          },
                        ],
                        "rexpr": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "f1",
                                },
                              },
                            ],
                            "location": 50,
                          },
                        },
                      },
                    },
                    "location": 52,
                    "name": [
                      {
                        "String": {
                          "sval": "||",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 54,
                        "sval": {
                          "sval": "-",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 40 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 52,
                "relname": "indtoasttest",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "indtoasttest",
                                  },
                                },
                              ],
                              "location": 19,
                            },
                          },
                          "location": 31,
                          "typeName": {
                            "location": 33,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 39,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 200,
                          },
                          "location": 42,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "substring",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 42 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VacuumStmt": {
          "is_vacuumcmd": true,
          "options": [
            {
              "DefElem": {
                "defaction": "DEFELEM_UNSPEC",
                "defname": "freeze",
                "location": 66,
              },
            },
          ],
          "rels": [
            {
              "VacuumRelation": {
                "relation": {
                  "inh": true,
                  "location": 73,
                  "relname": "indtoasttest",
                  "relpersistence": "p",
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 44 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 51,
                "relname": "indtoasttest",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "indtoasttest",
                                  },
                                },
                              ],
                              "location": 18,
                            },
                          },
                          "location": 30,
                          "typeName": {
                            "location": 32,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 38,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 200,
                          },
                          "location": 41,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "substring",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 45 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateFunctionStmt": {
          "funcname": [
            {
              "String": {
                "sval": "update_using_indirect",
              },
            },
          ],
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "plpgsql",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "language",
                "location": 141,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "List": {
                    "items": [
                      {
                        "String": {
                          "sval": "
BEGIN
    NEW := make_tuple_indirect(NEW);
    RETURN NEW;
END",
                        },
                      },
                    ],
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "as",
                "location": 158,
              },
            },
          ],
          "returnType": {
            "location": 125,
            "names": [
              {
                "String": {
                  "sval": "trigger",
                },
              },
            ],
            "typemod": -1,
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 54 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateTrigStmt": {
          "events": 20,
          "funcname": [
            {
              "String": {
                "sval": "update_using_indirect",
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 89,
            "relname": "indtoasttest",
            "relpersistence": "p",
          },
          "row": true,
          "timing": 2,
          "trigname": "indtoasttest_update_indirect",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 60 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "UpdateStmt": {
          "relation": {
            "inh": true,
            "location": 51,
            "relname": "indtoasttest",
            "relpersistence": "p",
          },
          "returningList": [
            {
              "ResTarget": {
                "location": 91,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "indtoasttest",
                                  },
                                },
                              ],
                              "location": 101,
                            },
                          },
                          "location": 113,
                          "typeName": {
                            "location": 115,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 121,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 200,
                          },
                          "location": 124,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "substring",
                        },
                      },
                    ],
                    "location": 91,
                  },
                },
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 68,
                "name": "cnt",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "cnt",
                            },
                          },
                        ],
                        "location": 74,
                      },
                    },
                    "location": 78,
                    "name": [
                      {
                        "String": {
                          "sval": "+",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 79,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 63 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "UpdateStmt": {
          "relation": {
            "inh": true,
            "location": 58,
            "relname": "indtoasttest",
            "relpersistence": "p",
          },
          "returningList": [
            {
              "ResTarget": {
                "location": 107,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "indtoasttest",
                                  },
                                },
                              ],
                              "location": 117,
                            },
                          },
                          "location": 129,
                          "typeName": {
                            "location": 131,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 137,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 200,
                          },
                          "location": 140,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "substring",
                        },
                      },
                    ],
                    "location": 107,
                  },
                },
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 75,
                "name": "cnt",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "cnt",
                            },
                          },
                        ],
                        "location": 81,
                      },
                    },
                    "location": 85,
                    "name": [
                      {
                        "String": {
                          "sval": "+",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 86,
                      },
                    },
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 89,
                "name": "f1",
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 94,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 66 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "UpdateStmt": {
          "relation": {
            "inh": true,
            "location": 65,
            "relname": "indtoasttest",
            "relpersistence": "p",
          },
          "returningList": [
            {
              "ResTarget": {
                "location": 118,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "indtoasttest",
                                  },
                                },
                              ],
                              "location": 128,
                            },
                          },
                          "location": 140,
                          "typeName": {
                            "location": 142,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 148,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 200,
                          },
                          "location": 151,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "substring",
                        },
                      },
                    ],
                    "location": 118,
                  },
                },
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 82,
                "name": "cnt",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "cnt",
                            },
                          },
                        ],
                        "location": 88,
                      },
                    },
                    "location": 92,
                    "name": [
                      {
                        "String": {
                          "sval": "+",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 93,
                      },
                    },
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 96,
                "name": "f1",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 101,
                      },
                    },
                    "location": 103,
                    "name": [
                      {
                        "String": {
                          "sval": "||",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 105,
                        "sval": {
                          "sval": "",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 69 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "UpdateStmt": {
          "relation": {
            "inh": true,
            "location": 9,
            "relname": "indtoasttest",
            "relpersistence": "p",
          },
          "returningList": [
            {
              "ResTarget": {
                "location": 68,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "indtoasttest",
                                  },
                                },
                              ],
                              "location": 78,
                            },
                          },
                          "location": 90,
                          "typeName": {
                            "location": 92,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 98,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 200,
                          },
                          "location": 101,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "substring",
                        },
                      },
                    ],
                    "location": 68,
                  },
                },
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 26,
                "name": "cnt",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "cnt",
                            },
                          },
                        ],
                        "location": 32,
                      },
                    },
                    "location": 36,
                    "name": [
                      {
                        "String": {
                          "sval": "+",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 37,
                      },
                    },
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 40,
                "name": "f1",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "A_Const": {
                            "location": 45,
                            "sval": {
                              "sval": "-",
                            },
                          },
                        },
                        "location": 48,
                        "name": [
                          {
                            "String": {
                              "sval": "||",
                            },
                          },
                        ],
                        "rexpr": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "f1",
                                },
                              },
                            ],
                            "location": 50,
                          },
                        },
                      },
                    },
                    "location": 52,
                    "name": [
                      {
                        "String": {
                          "sval": "||",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 54,
                        "sval": {
                          "sval": "-",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 71 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 27,
                "name": "descr",
              },
            },
            {
              "ResTarget": {
                "location": 34,
                "name": "f1",
              },
            },
            {
              "ResTarget": {
                "location": 38,
                "name": "f2",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "indtoasttest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 49,
                          "sval": {
                            "sval": "one-toasted,one-null, via indirect",
                          },
                        },
                      },
                      {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "location": 94,
                                "sval": {
                                  "sval": "1234567890",
                                },
                              },
                            },
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 30000,
                                },
                                "location": 107,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "repeat",
                              },
                            },
                          ],
                          "location": 87,
                        },
                      },
                      {
                        "A_Const": {
                          "isnull": true,
                          "location": 115,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 73 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 52,
                "relname": "indtoasttest",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "indtoasttest",
                                  },
                                },
                              ],
                              "location": 19,
                            },
                          },
                          "location": 31,
                          "typeName": {
                            "location": 33,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 39,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 200,
                          },
                          "location": 42,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "substring",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 75 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VacuumStmt": {
          "is_vacuumcmd": true,
          "options": [
            {
              "DefElem": {
                "defaction": "DEFELEM_UNSPEC",
                "defname": "freeze",
                "location": 66,
              },
            },
          ],
          "rels": [
            {
              "VacuumRelation": {
                "relation": {
                  "inh": true,
                  "location": 73,
                  "relname": "indtoasttest",
                  "relpersistence": "p",
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 77 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 51,
                "relname": "indtoasttest",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "indtoasttest",
                                  },
                                },
                              ],
                              "location": 18,
                            },
                          },
                          "location": 30,
                          "typeName": {
                            "location": 32,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 38,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 200,
                          },
                          "location": 41,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "substring",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 78 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "indtoasttest",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 80 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "ObjectWithArgs": {
                "objname": [
                  {
                    "String": {
                      "sval": "update_using_indirect",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_FUNCTION",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`indirect_toast.sql > line 81 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "kind": "VAR_RESET",
          "name": "default_toast_compression",
        },
      },
    },
  ],
  "version": 160001,
}
`;
